apps/monitoring/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  namespace: monitoring
  labels:
    app.kubernetes.io/name: grafana
    app.kubernetes.io/part-of: monitoring
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: monitoring-security-headers@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - grafana.omv.mousses.xyz
      secretName: grafana-tls
  rules:
    - host: grafana.omv.mousses.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kube-prometheus-stack-grafana
                port:
                  number: 80
